--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,8 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-
+    - name: Movement
+      run: cd hello
     - name: Build
       run: go build -v ./...
 
